# VLA_Driving

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  lane_steering.yaml  lane_steering_motor.yaml  motor_control.yaml  motor_control_lidar.yaml  motor_control_lidar_attention_combined.yaml  motor_control_lidar_kookmin.yaml  motor_control_temporal.yaml  motor_control_temporal_camera.yaml  motor_control_temporal_combined.yaml  motor_control_temporal_combined_pose.yaml  vla_15laps.yaml  vla_15laps_no_route.yaml
scripts/: build_dataset_split.py  build_motor_cache.py  extract_ros2_bag.py  extract_sqlite_motor_bag.py  infer.py  infer_lane_steering.py  infer_motor_control.py  infer_motor_control_temporal.py  infer_motor_control_temporal_camera.py  inspect_lane_steering_data.py  publish_camera_features.py  teleop_xycar_motor.py  train.py  train_lane_steering.py  train_motor_control.py  train_motor_control_cache.py  train_motor_control_temporal.py  train_motor_control_temporal_camera.py
src/vla_driving/: __init__.py
src/vla_driving/control/: pure_pursuit.py
src/vla_driving/data/: driving_dataset.py  lane_steering_dataset.py  motor_control_dataset.py  motor_temporal_dataset.py  motor_temporal_image_dataset.py
src/vla_driving/models/: lane_steering.py  lightweight_transfuser.py  motor_control.py  motor_temporal.py  motor_temporal_camera.py
src/vla_driving/perception/: __init__.py  feature_extractor.py
tests/: test_lane_steering.py  test_lap_counter.py  test_model_smoke.py  test_perception_extractor.py  test_route_provider.py
(+4 files in other folders)
